--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": "^14"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
@@ -48,10 +49,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "express-mongo-sanitize": "^2.1.0",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
     "validator": "^13.6.0",
