--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": "^14"
   },
   "dependencies": {
+    "aws-sdk": "^2.981.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -55,6 +56,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "twilio": "^3.67.1",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
